# skewencoder

./: .gitignore  COLVAR  LICENCE.txt  README.md  __init__.py  pyproject.toml  state_detection.py
Tutorial/: activate.sh  chabaDemo.ipynb  chabaDemo_w_output.ipynb  job.inp
demos/BAS/: chabaDemo.py
demos/DA/forward/: job.inp
demos/DA/new_workflow/: DADemo.py
demos/DA/reverse/: runsbatch.sh
demos/Passerini/: passeriniDemo.py
demos/Passerini/Passerini-1/: job.inp  job_restart.inp  passeriniDemo.py
demos/SN2/forward/utils/: generate_input.py
demos/SN2/reverse/: job.inp
demos/SN2/utils/: gen_inp.py
demos/Tutorial/chaba/: chabaDemo.ipynb
demos/case_studies/DA/new_workflow/: job.inp  job_restart.inp  runsbatch.sh
demos/case_studies/DA/reverse/: job.inp
demos/case_studies/Passerini/Passerini-1/: job.inp  job_restart.inp  runsbatch.sh
demos/case_studies/model_systems/: 2dDemo_opes.py
demos/model_systems/: 2dDemo_elongated.py
skewencoder/: __init__.py  gen_plumed.py  io.py  model_skewencoder.py  plumedkits.py  state_detection.py  switchfunction.py
test/: test_plumedkit.py  test_state_detection.py
test/test_gen_plumed/: test2.xyz  test_gen_plumed.py
test/test_io/: test_io.py
test_cases/BAS/: chabaDemo.py  job_restart.inp  runsbatch.sh
test_cases/DA/forward/: DADemo2.py  job_restart.inp
test_cases/DA/reverse/: DADemo2.py
test_cases/SN2/forward/: SNDemo.py  runsbatch.sh
test_cases/SN2/reverse/: runsbatch.sh  skewloss.py
test_cases/model_systems/: 2dDemo_MB.py
test_cases/model_systems/utils/: generate_input.py
(+19 files in other folders)
